--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -87,19 +87,9 @@ table.tablewithborder {
     }
 
     table.tablewithborder tr {
-        border: 1px solid #333333;
+        border: 1px solid #444444;
         background-color: #777777;
     }
-
-table.fwtable td {
-    border: 1px solid black;
-    background-color: #cccccc;
-}
-
-table.fwtable {
-    border-collapse: collapse;
-    width: 100%;
-}
 
 table.tablenoborder {
     width: 99%;
@@ -338,6 +328,7 @@ table.insidetable {
 #progressContainer {
     position: relative;
     display: inline-block;
+    top:-7px;
     overflow: visible;
     width: 100%;
     height: 30px;
@@ -350,8 +341,8 @@ table.insidetable {
 #progressBar {
     position: absolute;
     width: 100%;
-    height: 35px;
-    line-height: 35px;
+    height: 30px;
+    line-height: 30px;
     background-color: #4CAF50;
     text-align: center;
     vertical-align: middle;
