--- a/templates/syslog.html
+++ b/templates/syslog.html
@@ -72,7 +72,7 @@
             <form method="post">
                 <input type="hidden" name="id" value="{{ info['id'] }}" />
                 <tr>
-                    <td><font class="font12px">{{ ctime(info['utctime']) }}</font></td>
+                    <td nowrap><font class="font12px">{{ ctime(info['utctime']) }}</font></td>
                     <td><font class="font12px">{{ info['source'] }}</font></td>
                     <td><font class="font12px">{{ info['facility'] }}</font></td>
                     <td><font class="font12px">{{ info['severity'] }}</font></td>
