--- a/templates/switch.html
+++ b/templates/switch.html
@@ -250,6 +250,7 @@ document.getElementById("liProgress").style.display = "block";
                     <input type="hidden" name="searchPlatform" value="{{ formresult.searchPlatform }}">
                     <input type="hidden" name="searchOS" value="{{ formresult.searchOS }}">
                     <input type="hidden" name="searchTopology" value="{{ formresult.searchTopology }}">
+                    <input type="hidden" name="orgIPaddress" id="orgIPaddress">
                     <td><div class="editField"><input type="text" id="editIpaddress" name="ipaddress" class="input"></div></td>
                     <td><div class="editField"><input type="text" id="editDescription" name="description" class="input"></div></td>
                     <td><div class="editField"><input type="text" id="editUsername" name="username" class="input"></div></td>
